stopped jumping to the anchor point

--- a/style.scss
+++ b/style.scss
@@ -319,6 +319,7 @@ a.taco-logo {
     white-space: nowrap;
     display: block;
     margin-top: 50vh; // center at the viewport half
+    cursor: pointer;
   }
 }
 
